--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
     <link rel="stylesheet" href="./exd_files/gxv6owu.css">
     <link rel="stylesheet" href="./exd_files/all.css">
     <script>var lang = 'en';</script>
-    <link rel="shortcut icon" href="https://extremedoorsllc.com/cdn/shop/files/favicon-32x32_32x32.png?v=1674675151" type="image/png">
+    <link rel="shortcut icon" href="./exd_files/favicon.ico" type="image/png">
     <title> Extreme Garage Doors | Licensed & Insured</title>
-    <meta name="description" content="Lafantaisie Dock is the reference in aluminum docks and accessories since 1991.">
-    <meta property="og:site_name" content="Quai Lafantaisie">
+    <meta name="description" content="Extreme Doors is the reference for garage door installation and services for area in and around Upstate, SC.">
+    <meta property="og:site_name" content="ExtremeDoorsLLC">
     <meta property="og:url" content="https://extremedoorsllc.com/">
-    <meta property="og:title" content="Aluminum Dock Manufacturer">
+    <meta property="og:title" content="Extreme Garage Doors">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="Lafantaisie Dock is the reference in aluminum docks and accessories since 1991.">
+    <meta property="og:description" content="Extreme Doors is the reference for garage door installation and services for area in and around Upstate, SC.">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Aluminum Dock Manufacturer">
-    <meta name="twitter:description" content="Lafantaisie Dock is the reference in aluminum docks and accessories since 1991.">
+    <meta name="twitter:title" content="Extreme Garage Doors">
+    <meta name="twitter:description" content="Extreme Doors is the reference for garage door installation and services for area in and around Upstate, SC.">
     <link rel="stylesheet" href="./exd_files/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="./exd_files/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="./exd_files/main.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="alternate" hreflang="x-default" href="https://quailafantaisie.com/">
+    <link rel="alternate" hreflang="x-default" href="https://.com/">
     <link rel="alternate" hreflang="en-US" href="https://extremedoorsllc.com/">
-    <link rel="alternate" hreflang="fr-CA" href="https://quailafantaisie.com/">
+    <link rel="alternate" hreflang="fr-CA" href="https://.com/">
     <script async="async" src="./exd_files/preloads.js.download"></script>
     <script src="./exd_files/sanity.js.download"></script>
     <link rel="canonical" href="https://extremedoorsllc.com/">
@@ -47,7 +47,7 @@
     <script type="module" defer="" src="./exd_files/consent-tracking-api.js.download"></script>
     <script type="text/javascript" src="./exd_files/afde4f0c-4096-4aeb-b345-d1aea539851b"></script>
   </head>
-  <body id="aluminum-dock-manufacturer" class="template-index" cz-shortcut-listen="true">
+  <body id="extreme-garage-doors" class="template-index" cz-shortcut-listen="true">
     <header>
       <nav class="top-bar">
         <ul class="menu">
@@ -64,7 +64,7 @@
       </nav>
       <nav class="main-menu">
         <a href="https://extremedoorsllc.com/" class="brand">
-          <img src="./exd_files/extremedoors.png" alt="Lafantaisie Docks" data-ly-processed="1740609491690">
+          <img src="./exd_files/extremedoors.png" alt="ExtremeDoors" data-ly-processed="1740609491690">
         </a>
         <ul class="menu">
           <li class="menu-link has-dropdown">
@@ -80,7 +80,7 @@
                 <a href="https://extremedoorsllc.com/services/sales">Sales</a>
               </li>
               <!--li class="menu-link">
-                <a href="https://extremedoorsllc.com/services/dock-accessories">Replace</a>
+                <a href="https://extremedoorsllc.com/services/">Replace</a>
               </li-->
             </ul>
           </li>
@@ -129,8 +129,8 @@
     <script src="./exd_files/product-control.js.download"></script>
     <main role="main" id="MainContent">
       <section class="home-hero">
-        <video autoplay="" playsinline="" loop="" muted="" poster="//lafantaisiedock.com/cdn/shop/t/21/assets/home-video-hero.jpg?v=119805546019329927901734391070" id="background-video" webkit-playsinline="" x5-playsinline="" src="//lafantaisiedock.com/cdn/shop/t/21/assets/home-desktop-hero.mp4?v=149111846225145630441734391155">
-          <source src="//lafantaisiedock.com/cdn/shop/t/21/assets/home-mobile-hero.mp4?v=180217228385860137171734445903" type="video/mp4" data-ly-processed="1740609491690">
+        <video autoplay="" playsinline="" loop="" muted="" poster="//.com/cdn/shop/t/21/assets/home-video-hero.jpg?v=119805546019329927901734391070" id="background-video" webkit-playsinline="" x5-playsinline="" src="//.com/cdn/shop/t/21/assets/home-desktop-hero.mp4?v=149111846225145630441734391155">
+          <source src="//.com/cdn/shop/t/21/assets/home-mobile-hero.mp4?v=180217228385860137171734445903" type="video/mp4" data-ly-processed="1740609491690">
         </video>
         <span class="overlay"></span>
         <div class="content">
@@ -225,9 +225,9 @@
               </figure>
               <div class="quote-text">
                 <p>
-                  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691"> There are two things that impressed me about Quai Lafantaisie: When I came to get a quote, I thought it was going to be much more expensive than that. I was blown away! The second thing is about the installation: they are two young guys, but with professional work. When I saw him use his level to make sure the first walkway was correct. I was truly impressed. <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">
+                  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">
                 </p>
-                <span class="quote-name"> Guy Mongrain </span>
+                <span class="quote-name"> Guy </span>
               </div>
             </li>
             <li class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 3" data-swiper-slide-index="2" style="width: 3231px;">
@@ -239,9 +239,9 @@
               </figure>
               <div class="quote-text">
                 <p>
-                  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691"> With the docks and walkways, we are able to bring people to the water's edge (...) with minimal installation as to not disturb the environment and to have minimal impact on the land. This is definitely a positive and it allows people to make the most of the river. <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">
+                  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">
                 </p>
-                <span class="quote-name"> FAROUCHE </span>
+                <span class="quote-name"> Guy 2 </span>
               </div>
             </li>
             <li class="swiper-slide swiper-slide-prev" role="group" aria-label="3 / 3" data-swiper-slide-index="3" style="width: 3231px;">
@@ -253,9 +253,9 @@
               </figure>
               <div class="quote-text">
                 <p>
-                  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691"> (…) The person I contacted knew his product well, and you have prices that are very reasonable for the quality you have. It was an almost instant decision to do business with you. <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">
+                  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">  <img src="./exd_files/quote.svg" alt="Quotation icon" data-ly-processed="1740609491691">
                 </p>
-                <span class="quote-name"> Ray Junior </span>
+                <span class="quote-name"> Guy 3 </span>
               </div>
             </li>
           </ul>
@@ -340,73 +340,10 @@
         <menu>
           <ul>
             <li>
-              <a href="tel:6135462716">
+              <a href="tel:+18649094860">
                 <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Kingston</p>
-                <span>(613) 546-2716</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:8192828989">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Gatineau (Ottawa)</p>
-                <span>(819) 282-8989</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:7053240388">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Lindsay</p>
-                <span>(705) 324-0388</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:8193261153">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Sainte-Agathe</p>
-                <span>(819) 326-1153</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:4509793511">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Mirabel</p>
-                <span>(450) 979-3511</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:4502274677">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Saint-Sauveur</p>
-                <span>(450) 227-4677</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:8195715659">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Sherbrooke</p>
-                <span>(819) 571-5659</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:4182042804">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Quebec</p>
-                <span>(418) 204-2804</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:8196230610">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Mont-Laurier</p>
-                <span>(819) 623 0610</span>
-              </a>
-            </li>
-            <li>
-              <a href="tel:4186155161">
-                <img src="./exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                <p>Chicoutimi</p>
-                <span>(418) 615-5161</span>
+                <p>Spartanburg, SC</p>
+                <span>(864) 909-4860</span>
               </a>
             </li>
           </ul>
@@ -423,12 +360,12 @@
           a.callMethod ? a.callMethod.apply(a, arguments) : a.queue.push(arguments)
         }, b._fbq || (b._fbq = a), a.push = a, a.loaded = !0, a.version = "2.0", a.queue = [], c = e.createElement(f), c.async = !0, c.src = g, d = e.getElementsByTagName(f)[0], d.parentNode.insertBefore(c, d))
       }(window, document, "script", "https://connect.facebook.net/en_US/fbevents.js");
-      fbq("init", "1979494515656928");
-      fbq("set", "agent", "tmgoogletagmanager", "1979494515656928");
+      fbq("init", "");
+      fbq("set", "agent", "tmgoogletagmanager", "");
       fbq("track", "PageView");
     </script>
     <noscript>
-      <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1979494515656928&amp;ev=PageView&amp;noscript=1">
+      <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=&amp;ev=PageView&amp;noscript=1">
     </noscript>
     <script type="text/javascript" id="" charset="">
       (function(a, e, b, f, g, c, d) {
@@ -447,7 +384,7 @@
         <div>
           <a href="https://extremedoorsllc.com/" class="_logo">
             <figure>
-              <img src="./exd_files/extremedoors.png" alt="Lafantaisie Docks" data-ly-processed="1740609491691">
+              <img src="./exd_files/extremedoors.png" alt="Extreme Doors" data-ly-processed="1740609491691">
             </figure>
           </a>
           <p class="footer-description"> Extreme Doors is the reference for garage door installation and services for area in and around Upstate, SC. </p>
@@ -619,13 +556,13 @@
       </div>
           </span>
           <ul id="languagesSwitcherList-1" role="list" class="ly-custom-dropdown-list ly-is-open ly-bright-theme" style="background: #fff; color: #000;  border-style: solid; border-width: 0px; border-radius: 0px; border-color: #000;"><li key="fr" style="color: #000;  margin: 0px 0px; padding: 0px 0px;" tabindex="-1">
-                  <a class="ly-custom-dropdown-list-element ly-languages-switcher-link ly-bright-theme" href="https://quailafantaisie.com/" data-language-code="fr" data-ly-locked="true"><i class="ly-icon ly-flag-icon ly-flag-icon-fr"></i><span class="ly-custom-dropdown-list-element-right">Fr</span></a>
+                  <a class="ly-custom-dropdown-list-element ly-languages-switcher-link ly-bright-theme" href="https://extremedoorsllc.com/" data-language-code="fr" data-ly-locked="true"><i class="ly-icon ly-flag-icon ly-flag-icon-fr"></i><span class="ly-custom-dropdown-list-element-right">Fr</span></a>
                 </li><li key="en" class="current" style="color: #000;  margin: 0px 0px; padding: 0px 0px;" tabindex="-1">
                   <a class="ly-custom-dropdown-list-element ly-languages-switcher-link ly-bright-theme current_lang" href="https://extremedoorsllc.com/" data-language-code="en" data-ly-locked="true"><i class="ly-icon ly-flag-icon ly-flag-icon-en"></i><span class="ly-custom-dropdown-list-element-right">En</span></a>
                 </li></ul>
         </div></div>
 
-<div data-breakpoint="1000" class="ly-switcher-wrapper ly-breakpoint-2 custom ly-custom ly-is-transparent ly-hide" style="font-size: 20px; "><div aria-label="Selected language: English" aria-description="Language selector" data-breakpoint="1000" class="ly-languages-switcher ly-links  ly-bright-theme" style="color: #ffffff;"><a href="https://extremedoorsllc.com/" data-language-code="en" data-ly-locked="true" class="ly-languages-switcher-link current_lang" style=" color: #ffffff;  margin: 0px 0px;  padding: 0px 0px;  border-style: solid; border-width: 0px; border-radius: 0px; border-color: #ffffff;" tabindex="-1"><span class="ly-inner-text">En</span></a><a href="https://quailafantaisie.com/" data-language-code="fr" data-ly-locked="true" class="ly-languages-switcher-link" style=" color: #ffffff;  margin: 0px 0px;  padding: 0px 0px;  border-style: solid; border-width: 0px; border-radius: 0px; border-color: #ffffff;" tabindex="-1"><span class="ly-inner-text">Fr</span></a></div></div>
+<div data-breakpoint="1000" class="ly-switcher-wrapper ly-breakpoint-2 custom ly-custom ly-is-transparent ly-hide" style="font-size: 20px; "><div aria-label="Selected language: English" aria-description="Language selector" data-breakpoint="1000" class="ly-languages-switcher ly-links  ly-bright-theme" style="color: #ffffff;"><a href="https://extremedoorsllc.com/" data-language-code="en" data-ly-locked="true" class="ly-languages-switcher-link current_lang" style=" color: #ffffff;  margin: 0px 0px;  padding: 0px 0px;  border-style: solid; border-width: 0px; border-radius: 0px; border-color: #ffffff;" tabindex="-1"><span class="ly-inner-text">En</span></a><a href="https://extremedoorsllc.com/" data-language-code="fr" data-ly-locked="true" class="ly-languages-switcher-link" style=" color: #ffffff;  margin: 0px 0px;  padding: 0px 0px;  border-style: solid; border-width: 0px; border-radius: 0px; border-color: #ffffff;" tabindex="-1"><span class="ly-inner-text">Fr</span></a></div></div>
 <iframe height="0" width="0" style="display: none; visibility: hidden;" ly-is-observing="true" src="./exd_files/saved_resource.html"></iframe-->
 </body>
 </html>
