--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <script src="./exd_files/product-control.js.download"></script>
     <main role="main" id="MainContent">
       <section class="home-hero">
-        <video autoplay="" playsinline="" loop="" muted="" poster="./exd_files/home-hero.jpg" id="background-video" webkit-playsinline="" x5-playsinline="" src="//.com/cdn/shop/t/21/assets/home-desktop-hero.mp4?v=149111846225145630441734391155">
+        <video autoplay="" playsinline="" loop="" muted="" poster="./exd_files/home-hero.jpg" id="background-video" webkit-playsinline="" x5-playsinline="" src="./exd_files/home-hero.jpg">
           <source src="./exd_files/home-hero.mp4" type="video/mp4" data-ly-processed="1740609491690">
         </video>
         <span class="overlay"></span>
