--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
     <meta name="twitter:description" content="Extreme Doors is the reference for garage door installation and services for area in and around Upstate, SC.">
     <link rel="stylesheet" href="./exd_files/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="./exd_files/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
-    <link href="./exd_files/main.css" rel="stylesheet" type="text/css" media="all">
+    <link href="https://extremedoorsllc.com/exd_files/main.css" rel="stylesheet" type="text/css" media="all">
     <link rel="alternate" hreflang="x-default" href="https://.com/">
     <link rel="alternate" hreflang="en-US" href="https://extremedoorsllc.com/">
     <link rel="alternate" hreflang="fr-CA" href="https://.com/">
