--- a/404.html
+++ b/404.html
@@ -2,23 +2,11 @@
 <html class="js supports-no-cookies" lang="en" ly-is-observing="true">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="preload" as="script" href="https://extremedoorsllc.com/exd_files/loader(1).js.download">
-    <script async="" src="https://extremedoorsllc.com/exd_files/clarity.js.download"></script>
-    <script async="" src="https://extremedoorsllc.com/exd_files/call-tracking_9.js.download" nonce=""></script>
-    <script async="" src="https://extremedoorsllc.com/exd_files/j1ax9cnd1f"></script>
-    <script type="text/javascript" async="" src="https://extremedoorsllc.com/exd_files/hotjar-3334475.js.download"></script>
-    <script type="text/javascript" async="" src="https://extremedoorsllc.com/exd_files/js"></script>
-    <script async="" src="https://extremedoorsllc.com/exd_files/fbevents.js.download"></script>
-    <script type="text/javascript" async="" src="https://extremedoorsllc.com/exd_files/loader.js.download"></script>
-    <script type="text/javascript" async="" src="https://extremedoorsllc.com/exd_files/trekkie.storefront.68728afc2577e1593a48001edcb560128ef43fd2.min.js.download"></script>
-    <script async="" src="https://extremedoorsllc.com/exd_files/gtm.js.download"></script>
-    <script id="spcloader" type="text/javascript" async="" charset="utf-8" src="https://extremedoorsllc.com/exd_files/loader(1).js.download"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://extremedoorsllc.com/exd_files/gxv6owu.css">
     <link rel="stylesheet" href="https://extremedoorsllc.com/exd_files/all.css">
     <script>var lang = 'en';</script>
     <link rel="shortcut icon" href="https://extremedoorsllc.com/exd_files/favicon.ico" type="image/png">
-    <title> Extreme Garage Doors | Licensed & Insured</title>
+    <title> 404 Error | Extreme Garage Doors </title>
     <meta name="description" content="Extreme Doors is the reference for garage door installation and services for area in and around Upstate, SC.">
     <meta property="og:site_name" content="ExtremeDoorsLLC">
     <meta property="og:url" content="https://extremedoorsllc.com/">
@@ -31,23 +19,34 @@
     <link rel="stylesheet" href="https://extremedoorsllc.com/exd_files/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link href="https://extremedoorsllc.com/exd_files/swiper-bundle.min.css" rel="stylesheet" type="text/css" media="all">
     <link href="https://extremedoorsllc.com/exd_files/main.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="alternate" hreflang="x-default" href="https://.com/">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MV2464D9');</script>
+    <!-- End Google Tag Manager -->
+    <link rel="alternate" hreflang="x-default" href="https://extremedoorsllc.com/">
     <link rel="alternate" hreflang="en-US" href="https://extremedoorsllc.com/">
-    <link rel="alternate" hreflang="fr-CA" href="https://.com/">
-    <script async="async" src="https://extremedoorsllc.com/exd_files/preloads.js.download"></script>
     <script src="https://extremedoorsllc.com/exd_files/sanity.js.download"></script>
     <link rel="canonical" href="https://extremedoorsllc.com/">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="628">
-    <script async="" src="https://extremedoorsllc.com/exd_files/bfd4c30bewb0c33e81p949af984m6c3bb5d2m.js.download"></script>
-    <script type="text/javascript" async="" src="https://extremedoorsllc.com/exd_files/sdk.4884bb2ed6d4364f0f8d22e04808ecd9dbe30805.js.download" charset="utf-8"></script>
-    <script async="" src="https://extremedoorsllc.com/exd_files/modules.ef5986d046c68a8c77c1.js.download" charset="utf-8"></script>
-    <script type="text/javascript" src="https://extremedoorsllc.com/exd_files/b50b7f30-3efc-40a4-958b-47c84a6ef83f" data-awssuidacr="68a59834-8359-4774-9407-4f24c6e83874"></script>
-    <script type="module" defer="" src="https://extremedoorsllc.com/exd_files/analytics.js.download"></script>
-    <script type="module" defer="" src="https://extremedoorsllc.com/exd_files/consent-tracking-api.js.download"></script>
-    <script type="text/javascript" src="https://extremedoorsllc.com/exd_files/afde4f0c-4096-4aeb-b345-d1aea539851b"></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-024N0NZVRN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-024N0NZVRN');
+  </script>
   <body id="extreme-garage-doors" class="template-index" cz-shortcut-listen="true">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MV2464D9"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <nav class="top-bar">
         <ul class="menu">
@@ -64,7 +63,7 @@
       </nav>
       <nav class="main-menu">
         <a href="https://extremedoorsllc.com/" class="brand">
-          <img src="https://extremedoorsllc.com/exd_files/extremedoors.png" alt="ExtremeDoors" data-ly-processed="1740609491690">
+          <img src="https://extremedoorsllc.com/exd_files/extremedoors.png" alt="ExtremeDoors">
         </a>
         <ul class="menu">
           <li class="menu-link has-dropdown">
@@ -136,13 +135,13 @@
             <a class="btn -accent -hover-dark" href="https://extremedoorsllc.com/">Back to homepage</a>
         </section>
         <section class="menu-telephone">
-            <h2> Call one of <br> our locations : </h2>
+            <h2> Call one of <br> our representatives : </h2>
             <menu>
               <ul>
                 <li>
                   <a href="tel:+18649094860">
-                    <img src="https://extremedoorsllc.com/exd_files/icon-phone.svg" alt="Phone icon" data-ly-processed="1740609491691">
-                    <p>Spartanburg, SC</p>
+                    <img src="https://extremedoorsllc.com/exd_files/icon-phone.svg" alt="Phone icon">
+                    <p>Mark Difort</p>
                     <span>(864) 909-4860</span>
                   </a>
                 </li>
@@ -150,8 +149,8 @@
             </menu>
           </section>
           <div class="button-phone" onclick="toggleDrawer()">
-            <img src="https://extremedoorsllc.com/exd_files/icon-phone.svg" alt="Icon phone" class="phone" data-ly-processed="1740609491691">
-            <img src="https://extremedoorsllc.com/exd_files/icon-close.svg" alt="Icon Close" class="close" data-ly-processed="1740609491691">
+            <img src="https://extremedoorsllc.com/exd_files/icon-phone.svg" alt="Icon phone" class="phone">
+            <img src="https://extremedoorsllc.com/exd_files/icon-close.svg" alt="Icon Close" class="close">
           </div>
         </main>
         <script type="text/javascript" id="" charset="">
@@ -184,7 +183,7 @@
             <div>
               <a href="https://extremedoorsllc.com/" class="_logo">
                 <figure>
-                  <img src="https://extremedoorsllc.com/exd_files/extremedoors.png" alt="Extreme Doors" data-ly-processed="1740609491691">
+                  <img src="https://extremedoorsllc.com/exd_files/extremedoors.png" alt="Extreme Doors">
                 </figure>
               </a>
               <p class="footer-description"> Extreme Doors is the reference for garage door installation and services for area in and around Upstate, SC. </p>
