--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
       <nav class="top-bar">
         <ul class="menu">
           <li class="menu-link ">
-            <a href="https://extremedoorsllc.com/pages/support?source=Menu">Upstate, SC & Western, NC</a>
+            <a href="https://extremedoorsllc.com/support?source=Menu">Upstate, SC & Western, NC</a>
           </li>
           <li class="menu-link ">
             <a href="tel:+18649094860">Call Us</a>
@@ -76,14 +76,14 @@
             </ul>
           </li>
           <li class="menu-link">
-            <a href="https://extremedoorsllc.com/pages/gallery"> Gallery </a>
+            <a href="https://extremedoorsllc.com/gallery"> Gallery </a>
           </li>
           <li class="menu-link">
-            <a href="https://extremedoorsllc.com/pages/about?source=Menu"> About </a>
+            <a href="https://extremedoorsllc.com/about?source=Menu"> About </a>
           </li>
-          <!--li class="menu-link"><a href="https://extremedoorsllc.com/pages/stores?source=Menu"> Careers </a></li-->
+          <!--li class="menu-link"><a href="https://extremedoorsllc.com/"> Careers </a></li-->
           <li class="menu-link">
-            <a href="https://extremedoorsllc.com/pages/contact?source=Menu"> Contact </a>
+            <a href="https://extremedoorsllc.com/contact?source=Menu"> Contact </a>
           </li>
           <li class="menu-link">
             <span class="ly-custom-1000 lang-switcher">
@@ -147,7 +147,7 @@
         
     </div>
 </section>
-<section class="commercialresidential" id="work" style="background-image: url('./media/5O0A6185.jpg'); background-position: 0% 40%;">
+<section class="commercialresidential" id="work" style="background-image: url('./exd_files/5O0A6185.jpg'); background-position: 0% 40%;">
   <figure>
     <img src="./exd_files/extremedoors.png" alt="">
   </figure>
@@ -240,28 +240,28 @@
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/pages/gallery">Gallery</a>
+                <a href="https://extremedoorsllc.com/gallery">Gallery</a>
               </li>
               <li>
-                <a href="https://extremedoorsllc.com/pages/about">About</a>
+                <a href="https://extremedoorsllc.com/about">About</a>
               </li>
               <li>
-                <a href="https://extremedoorsllc.com/pages/carrieres?source=Footer">Careers</a>
+                <a href="https://extremedoorsllc.com/carrieres?source=Footer">Careers</a>
               </li>
               <li>
-                <a href="https://extremedoorsllc.com/pages/"></a>
+                <a href="https://extremedoorsllc.com/"></a>
               </li>
             </ul>
           </nav>
         </div>
         <div>
           <h3>
-            <a href="https://extremedoorsllc.com/pages/contact?source=Footer"> Contact </a>
+            <a href="https://extremedoorsllc.com/contact?source=Footer"> Contact </a>
           </h3>
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/pages/stores"> Upstate, SC & Western, NC </a>
+                <a href="https://extremedoorsllc.com/stores"> Upstate, SC & Western, NC </a>
               </li>
               <li>
                 <a href="tel:+18649094860"> (864) 909-4860 </a>
@@ -298,7 +298,7 @@
       <div class="legal">
         <span> © 2025 Extreme Garage Doors - All rights reserved </span>
         <span>
-          <a href="https://extremedoorsllc.com/pages/legal-notice"> Legal Notice </a> | <a href="https://extremedoorsllc.com/pages/warranty-policy"> Warranty policy </a>
+          <a href="https://extremedoorsllc.com/legal-notice"> Legal Notice </a> | <a href="https://extremedoorsllc.com/warranty-policy"> Warranty policy </a>
         </span>
         <span id="credits">
           <a href="#" target="_blank">
