--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
       <nav class="top-bar">
         <ul class="menu">
           <li class="menu-link ">
-            <a href="https://extremedoorsllc.com/pages/support?source=Menu">Upstate, SC & Western, NC</a>
+            <a href="https://extremedoorsllc.com/">Upstate, SC & Western, NC</a>
           </li>
           <li class="menu-link ">
             <a href="tel:+18649094860">Call Us</a>
@@ -79,14 +79,14 @@
             </ul>
           </li>
           <li class="menu-link">
-            <a href="https://extremedoorsllc.com/pages/gallery"> Gallery </a>
+            <a href="https://extremedoorsllc.com/gallery"> Gallery </a>
           </li>
           <li class="menu-link">
-            <a href="https://extremedoorsllc.com/pages/about?source=Menu"> About </a>
+            <a href="https://extremedoorsllc.com/about?source=Menu"> About </a>
           </li>
-          <!--li class="menu-link"><a href="https://extremedoorsllc.com/pages/stores?source=Menu"> Careers </a></li-->
+          <!--li class="menu-link"><a href="https://extremedoorsllc.com/stores?source=Menu"> Careers </a></li-->
           <li class="menu-link">
-            <a href="https://extremedoorsllc.com/pages/estimation?source=Menu"> Contact </a>
+            <a href="https://extremedoorsllc.com/estimation?source=Menu"> Contact </a>
           </li>
           <li class="menu-link">
             <span class="ly-custom-1000 lang-switcher">
@@ -119,13 +119,13 @@
     </script>
     <main role="main" id="MainContent">
       <section class="menu-telephone">
-        <h2> Call one of <br> our locations : </h2>
+        <h2> Call one of <br> our representatives : </h2>
         <menu>
           <ul>
             <li>
               <a href="tel:+18649094860">
                 <img src="./exd_files/icon-phone.svg" alt="Phone icon">
-                <p>Spartanburg, SC</p>
+                <p>Mark Difort</p>
                 <span>(864) 909-4860</span>
               </a>
             </li>
@@ -149,7 +149,7 @@
             <p>Contact us today for more details</p>
           </figcaption>
           <figure>
-            <img src="./media/IMG-7253_SS2.png" alt="Image de quai">
+            <img src="./exd_files/IMG-7253_SS2.png" alt="DrillScrewing">
           </figure>
         </div>
         <div class="contact-info">
@@ -262,28 +262,28 @@
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/pages/gallery">Gallery</a>
+                <a href="https://extremedoorsllc.com/gallery">Gallery</a>
               </li>
               <li>
-                <a href="https://extremedoorsllc.com/pages/about">About</a>
+                <a href="https://extremedoorsllc.com/about">About</a>
               </li>
               <li>
-                <a href="https://extremedoorsllc.com/pages/carrieres?source=Footer">Careers</a>
+                <a href="https://extremedoorsllc.com/careers?source=Footer">Careers</a>
               </li>
-              <li>
-                <a href="https://extremedoorsllc.com/pages/"></a>
-              </li>
+              <!--li>
+                <a href="https://extremedoorsllc.com/"></a>
+              </li-->
             </ul>
           </nav>
         </div>
         <div>
           <h3>
-            <a href="https://extremedoorsllc.com/pages/contact?source=Footer"> Contact </a>
+            <a href="https://extremedoorsllc.com/contact?source=Footer"> Contact </a>
           </h3>
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/pages/stores"> Upstate, SC & Western, NC </a>
+                <a href="https://extremedoorsllc.com/"> Upstate, SC & Western, NC </a>
               </li>
               <li>
                 <a href="tel:+18649094860"> (864) 909-4860 </a>
@@ -320,7 +320,7 @@
       <div class="legal">
         <span> © 2025 Extreme Garage Doors - All rights reserved </span>
         <span>
-          <a href="https://extremedoorsllc.com/pages/legal-notice"> Legal Notice </a> | <a href="https://extremedoorsllc.com/pages/warranty-policy"> Warranty policy </a>
+          <a href="https://extremedoorsllc.com/legal-notice"> Legal Notice </a> | <a href="https://extremedoorsllc.com/warranty-policy"> Warranty policy </a>
         </span>
         <span id="credits">
           <a href="#" target="_blank">
