--- a/services/index.html
+++ b/services/index.html
@@ -133,7 +133,7 @@
         <div class="content">
           <h2> Serving Upstate, SC </h2>
           <p> & Western, NC </p>
-          <a class="btn -accent" href="https://extremedoorsllc.com/estimation?source=Hero-promo">Learn more</a>
+          <a class="btn -accent" href="https://extremedoorsllc.com/contact?source=Hero-promo">Learn more</a>
         </div>
       </section>
       <section id="product-cat-showcase" class="categories">
@@ -353,7 +353,7 @@
                 <a href="https://extremedoorsllc.com/about">About</a>
               </li>
               <li>
-                <a href="https://extremedoorsllc.com/carrieres?source=Footer">Careers</a>
+                <a href="https://extremedoorsllc.com/careers?source=Footer">Careers</a>
               </li>
               <li>
                 <a href="https://extremedoorsllc.com/"></a>
@@ -368,7 +368,7 @@
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/careers"> Upstate, SC & Western, NC </a>
+                <a href="https://extremedoorsllc.com/"> Upstate, SC & Western, NC </a>
               </li>
               <li>
                 <a href="tel:+18649094860"> (864) 909-4860 </a>
