--- a/services/index.html
+++ b/services/index.html
@@ -368,7 +368,7 @@
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/"> Upstate, SC & Western, NC </a>
+                <a href="https://www.google.com/maps/place/Upstate+South+Carolina,+SC"> Upstate, SC & Western, NC </a>
               </li>
               <li>
                 <a href="tel:+18649094860"> (864) 909-4860 </a>
