--- a/services/service.html
+++ b/services/service.html
@@ -388,7 +388,7 @@
                 <a href="https://extremedoorsllc.com/about">About</a>
               </li>
               <li>
-                <a href="https://extremedoorsllc.com/carrieres?source=Footer">Careers</a>
+                <a href="https://extremedoorsllc.com/careers?source=Footer">Careers</a>
               </li>
               <li>
                 <a href="https://extremedoorsllc.com/"></a>
@@ -403,7 +403,7 @@
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/careers"> Upstate, SC & Western, NC </a>
+                <a href="https://www.google.com/maps/place/Upstate+South+Carolina,+SC"> Upstate, SC & Western, NC </a>
               </li>
               <li>
                 <a href="tel:+18649094860"> (864) 909-4860 </a>
