--- a/services/install.html
+++ b/services/install.html
@@ -360,7 +360,7 @@
           <nav>
             <ul>
               <li>
-                <a href="https://extremedoorsllc.com/careers"> Upstate, SC & Western, NC </a>
+                <a href="https://www.google.com/maps/place/Upstate+South+Carolina,+SC"> Upstate, SC & Western, NC </a>
               </li>
               <li>
                 <a href="tel:+18649094860"> (864) 909-4860 </a>
