--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
     <main role="main" id="MainContent">
       <section class="introduction">
     <figure class="video-container">
-      <img src="./media/IMG_4564.JPG" alt="ExtremeDoorsLLC">
+      <img src="./exd_files/IMG_4564.JPG" alt="ExtremeDoorsLLC">
       
         <div class="_btn-play" data-vimeo-id="" onclick="playVideo(this);">
           <img src="./exd_files/play-btn.svg" alt="Play">
